--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,7 +33,13 @@
 }
 
 @media (min-width: 391px) and (max-width: 480px) {
-    
+    #quem-sou {
+        padding: 1rem;
+    }
+
+    #quem-sou p {
+        width: 100%;
+    }
 
 }
 
