--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ html {
 
 /* Formação */
 #formacao {
-    padding: 2rem 0;
+    padding: 2rem 3rem;
 }
 
 #formacao .timeline {
@@ -138,7 +138,7 @@ html {
     flex-direction: column;
     gap: 0.5rem;
     padding: 1rem;
-    background-color: #f8f9fa;
+    background-color: #dfdba4;
     border-radius: 0.5rem;
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
     flex: 1;
@@ -148,9 +148,10 @@ html {
     flex-shrink: 0;
     background-color: #3B422E;
     color: #fff;
+    width: 107%;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
-    margin-right: 1rem;
+    font-weight: 600;
 }
 
 #formacao .timeline-event-description {
@@ -183,7 +184,6 @@ html {
         margin: 0.5rem;
     }
 }
-
 
 /* Habilidades */
 #habilidades {
